# AgenticAI_and_Complete_Initial_Python-Codes

./: BASIC_PYTHON_PROJECTS_.ipynb  Copy_of_OPENAI_SDK_OPENROUTER1.ipynb  OOPS_AND_Python_projects_using_oop.ipynb  Python_projects_using_oop.ipynb  README.md  concepts.ipynb  pandas.ipynb  pyproject.toml
CrewAi(colab) llm planning/: crewai_crew_llm_planning.ipynb
Dual AI Agents/: .env  pyproject.toml
LiteLLM_Approach/: .env  README.md  poem.txt  pyproject.toml
LocalLLM(deepseek_via_Ollama)/: .env  README.md  poem.txt  pyproject.toml
knowledge_of_agent/: README.md  pyproject.toml
src/langgraphinto/: __init__.py  simpleflow.py
